# AddaxAI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AddaxAI_GUI.py  CLAUDE.md  Makefile  dev_launch.py  main.py  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
addaxai/: __init__.py  app.py
addaxai/analysis/: plots.py
addaxai/api/: server.py
addaxai/core/: config.py  event_types.py  events.py  logging.py  paths.py  platform.py  state.py
addaxai/hitl/: data.py
addaxai/i18n/: __init__.py  en.json  (+2 more)
tests/: gui_test_runner.py  test_analysis_plots.py  test_api.py  test_core_config.py  test_core_logging.py  test_core_paths.py  test_core_platform.py  test_core_state.py  test_deploy_helpers.py  test_event_bus.py  test_event_types.py  test_export_roundtrip.py  test_gui_integration.py  test_gui_smoke.py  test_hitl_data.py  test_i18n.py  test_leaf_helpers.py  test_model_download.py  test_model_protocol.py  test_models_deploy.py  test_models_registry.py  test_orchestration_callbacks.py  test_orchestration_context.py  test_orchestrator_events.py  test_package_structure.py  test_pipeline.py  test_postprocess_pipeline.py  test_processing_annotations.py  test_processing_export.py  test_processing_postprocess.py  test_produce_plots.py  test_run_postprocess.py  test_schemas.py  test_speciesnet_convert.py  test_stdout_parser.py  test_ui_about_tab.py  test_ui_dialogs.py  test_ui_event_wiring.py  test_ui_help_tab.py  test_ui_progress.py  (+7 more)
(+48 files in other folders)
